tests/errors/syn.overflow.s8-value.or
main :: () -> void {
    x := 1000s8;
    x;
};